# historytracers

./: .gitattributes  .gitignore  .gitmodules  .options.json  CODE_OF_CONDUCT.md  Dockerfile  Makefile  Makefile.am  README  README-ES.md  README-PT-BR.md  README-PT.md  README.es.md  README.md  README.pt-BR.md  SECURITY.md  aa.sh  bootstrap  configure.ac  create_geo_chapter.ps1  create_math_chapter.ps1  editor.html  geo_uuids.txt  historytracers-installer.ps1  historytracers-installer.sh  historytracers.py  historytracers2pkg.sh  ht-installer.ps1  ht-installer.sh  ht2pkg.sh  index.html  out
.github/: CONTRIBUTING.md
audios/: README-ES.md  README-PT-BR.md  README.md
bodies/: README-ES.md  README-PT-BR.md  README.md  acknowledgement.html  atlas.html  biology.html  chemical.html  chemistry.html  class_content.html  contact.html  families.html  first_steps.html  first_steps_games.html  first_steps_menu.html  first_steps_volume2.html  gallery.html  genealogical_faq.html  genealogical_first_steps.html  genealogical_map.html  genealogical_map_list.html  historical_events.html  history.html  indigenous_time.html  indigenous_who.html  indigenous_who_content.html  kids.html  license.html  literature.html  main.html  math_games.html  myths_believes.html  philosophy.html  physics.html  release.html  science.html  shapes.html  sources.html  tree.html  under_construction.html
css/: README-ES.md  README-PT-BR.md  README-PT.md  README.md  common.css  common_v10.css  common_v11.css  common_v13.css  common_v14.css  common_v15.css  common_v16.css  common_v17.css  common_v18.css  common_v19.css  common_v2.css  common_v20.css  common_v21.css  common_v22.css  common_v3.css  common_v4.css  common_v5.css  common_v6.css  common_v7.css  common_v8.css  common_v9.css  ht_common.css  ht_common_v23.css  ht_common_v24.css  ht_common_v25.css  ht_common_v26.css  ht_common_v27.css  ht_common_v28.css  ht_common_v29.css  ht_common_v30.css  ht_common_v31.css  ht_common_v32.css  ht_common_v33.css  ht_common_v34.css  ht_common_v35.css  ht_common_v36.css  (+39 more)
csv/: 25634853-9132-45fa-a6d9-3285e16922e8_en-US.csv  25634853-9132-45fa-a6d9-3285e16922e8_es-ES.csv  25634853-9132-45fa-a6d9-3285e16922e8_pt-BR.csv  2a5f1ee5-c15a-4ee5-a5d9-b5ef970d151b_en-US.csv  2a5f1ee5-c15a-4ee5-a5d9-b5ef970d151b_es-ES.csv  2a5f1ee5-c15a-4ee5-a5d9-b5ef970d151b_pt-BR.csv  30897c65-37fc-40e9-b73d-a1e55e034a41_en-US.csv  30897c65-37fc-40e9-b73d-a1e55e034a41_es-ES.csv  30897c65-37fc-40e9-b73d-a1e55e034a41_pt-BR.csv  33c83383-b9b5-43ec-987d-68f027f342b2_en-US.csv  33c83383-b9b5-43ec-987d-68f027f342b2_es-ES.csv  33c83383-b9b5-43ec-987d-68f027f342b2_pt-BR.csv  376a5f3c-c598-40ee-95ad-5db9046ab8e2_en-US.csv  376a5f3c-c598-40ee-95ad-5db9046ab8e2_es-ES.csv  376a5f3c-c598-40ee-95ad-5db9046ab8e2_pt-BR.csv  3b7f79c2-f6f0-4e8a-b233-8170d34cf4f0_en-US.csv  3b7f79c2-f6f0-4e8a-b233-8170d34cf4f0_es-ES.csv  3b7f79c2-f6f0-4e8a-b233-8170d34cf4f0_pt-BR.csv  3c463a57-284b-4f4a-a52e-033124b389d0_en-US.csv  3c463a57-284b-4f4a-a52e-033124b389d0_es-ES.csv  3c463a57-284b-4f4a-a52e-033124b389d0_pt-BR.csv  3d79495e-7f3b-45a8-ade2-6da246ee3d76_en-US.csv  3d79495e-7f3b-45a8-ade2-6da246ee3d76_es-ES.csv  3d79495e-7f3b-45a8-ade2-6da246ee3d76_pt-BR.csv  3ea21df7-f7c0-4341-bd2a-9ebbf8bb2228_en-US.csv  3ea21df7-f7c0-4341-bd2a-9ebbf8bb2228_es-ES.csv  3ea21df7-f7c0-4341-bd2a-9ebbf8bb2228_pt-BR.csv  4149b25a-3a8f-4bb2-b663-4dab5a5d885b_en-US.csv  4149b25a-3a8f-4bb2-b663-4dab5a5d885b_es-ES.csv  4149b25a-3a8f-4bb2-b663-4dab5a5d885b_pt-BR.csv  588c52dc-7b48-490d-acb4-044f07314444_en-US.csv  588c52dc-7b48-490d-acb4-044f07314444_es-ES.csv  588c52dc-7b48-490d-acb4-044f07314444_pt-BR.csv  5b2cc288-1a05-4a25-8f18-e70ad1ba213d_en-US.csv  5b2cc288-1a05-4a25-8f18-e70ad1ba213d_es-ES.csv  5b2cc288-1a05-4a25-8f18-e70ad1ba213d_pt-BR.csv  5f37bf06-ba10-41ac-a656-777ac20c08e4_en-US.csv  5f37bf06-ba10-41ac-a656-777ac20c08e4_es-ES.csv  5f37bf06-ba10-41ac-a656-777ac20c08e4_pt-BR.csv  5f92af2a-6eab-412d-b122-31719ebfcca3_en-US.csv  (+47 more)
gedcom/: 25634853-9132-45fa-a6d9-3285e16922e8_en-US.ged  25634853-9132-45fa-a6d9-3285e16922e8_es-ES.ged  25634853-9132-45fa-a6d9-3285e16922e8_pt-BR.ged  2a5f1ee5-c15a-4ee5-a5d9-b5ef970d151b_en-US.ged  2a5f1ee5-c15a-4ee5-a5d9-b5ef970d151b_es-ES.ged  2a5f1ee5-c15a-4ee5-a5d9-b5ef970d151b_pt-BR.ged  30897c65-37fc-40e9-b73d-a1e55e034a41_en-US.ged  30897c65-37fc-40e9-b73d-a1e55e034a41_es-ES.ged  30897c65-37fc-40e9-b73d-a1e55e034a41_pt-BR.ged  33c83383-b9b5-43ec-987d-68f027f342b2_en-US.ged  33c83383-b9b5-43ec-987d-68f027f342b2_es-ES.ged  33c83383-b9b5-43ec-987d-68f027f342b2_pt-BR.ged  376a5f3c-c598-40ee-95ad-5db9046ab8e2_en-US.ged  376a5f3c-c598-40ee-95ad-5db9046ab8e2_es-ES.ged  376a5f3c-c598-40ee-95ad-5db9046ab8e2_pt-BR.ged  3b7f79c2-f6f0-4e8a-b233-8170d34cf4f0_en-US.ged  3b7f79c2-f6f0-4e8a-b233-8170d34cf4f0_es-ES.ged  3b7f79c2-f6f0-4e8a-b233-8170d34cf4f0_pt-BR.ged  3c463a57-284b-4f4a-a52e-033124b389d0_en-US.ged  3c463a57-284b-4f4a-a52e-033124b389d0_es-ES.ged  3c463a57-284b-4f4a-a52e-033124b389d0_pt-BR.ged  3d79495e-7f3b-45a8-ade2-6da246ee3d76_en-US.ged  3d79495e-7f3b-45a8-ade2-6da246ee3d76_es-ES.ged  3d79495e-7f3b-45a8-ade2-6da246ee3d76_pt-BR.ged  3ea21df7-f7c0-4341-bd2a-9ebbf8bb2228_en-US.ged  3ea21df7-f7c0-4341-bd2a-9ebbf8bb2228_es-ES.ged  3ea21df7-f7c0-4341-bd2a-9ebbf8bb2228_pt-BR.ged  4149b25a-3a8f-4bb2-b663-4dab5a5d885b_en-US.ged  4149b25a-3a8f-4bb2-b663-4dab5a5d885b_es-ES.ged  4149b25a-3a8f-4bb2-b663-4dab5a5d885b_pt-BR.ged  588c52dc-7b48-490d-acb4-044f07314444_en-US.ged  588c52dc-7b48-490d-acb4-044f07314444_es-ES.ged  588c52dc-7b48-490d-acb4-044f07314444_pt-BR.ged  5b2cc288-1a05-4a25-8f18-e70ad1ba213d_en-US.ged  5b2cc288-1a05-4a25-8f18-e70ad1ba213d_es-ES.ged  5b2cc288-1a05-4a25-8f18-e70ad1ba213d_pt-BR.ged  5f37bf06-ba10-41ac-a656-777ac20c08e4_en-US.ged  5f37bf06-ba10-41ac-a656-777ac20c08e4_es-ES.ged  5f37bf06-ba10-41ac-a656-777ac20c08e4_pt-BR.ged  5f92af2a-6eab-412d-b122-31719ebfcca3_en-US.ged  (+48 more)
historytracers-1.0.0/: Makefile.am  README.md  SECURITY.md  ht2pkg.sh  index.html
images/: README-ES.md  README-PT-BR.md  README-PT.md  README.md  img_options.json
src/: README.md  (+4 more)
(+2352 files in other folders)
